2017-11-09  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-866

	* src/sourcetext.{h,cc} (SourceText):

	Add ability to mark the current position in controlfile for later use.
	This helps to output the correct line number in error messages for
	certain cases.

	* src/parser.cc (ArtsParser::parse_method):

	Set mark before reading the method name.

	* src/parser.cc (ArtsParser::parse_method_args):

	Use the marked position in error reporting for method calls without
	parenthesis. Fixes trac ticket #155 reported by Simon.

2017-11-08  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-865

	* doc/uguide/development.tex: Update arts-dev list address.

2017-11-08  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-864

	* README: Updated ARTS URL. Reported by Jana.

2017-11-06 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-863

	* src/optproperties.cc (ext_matTransform):
	Bug fix in PTYPE_AZIMUTH_RND higher stokes dim propmat handling.

	* src/rt4.cc (sca_optpropCalc):
	Bug fixes in azimuthal weight calculation and application.

	* src/m_microphysics.cc, methods.cc:
	Typos fixed.

2017-11-06  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	API BREAKING! This may break your controlfiles if you are
	using OEM.

	* arts-2-3-862

	* src/covariance_matrix.[h,cc]:
	- Refactored CovarianceMatrix class and updated documentation
	to some extent.

	* src/m_basic_types.cc:
	- Added WSM to create dense and sparse diagonal matrices from
	vectors.

	* src/m_retrieval.cc:

	- Made covmat_seSet, covmat_seAddBlock, covmatSeAddInverseBlock,
	covmat_sxSet, covmat_sxAdd, covmat_sxAddInverseBlock
	supergeneric.

	- Made covmat1D, covmat1DMarkov and covmatDiagonal supergeneric.

	- Removed covmat_se from arguments to retrievalDefClose

	* src/test_covariance_matrix.cc:

	- Extended tests to cover also workspace methods.

	* controlfiles/artscomponents/oem/TestOEM.arts:
	- Adapted controlfile

2017-11-06  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-861
	