@@ -1,3 +1,13 @@
+2017-11-09  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>
+
+	* arts-2-3-867
+
+	* src/arts_api.[h, cc]
+
+	Add method that prints formatted method documentation to
+	string buffer.
+
+
 2017-11-09  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-866
